task - 4: add style

--- a/task-4/index.html
+++ b/task-4/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<article>
+<article class="todo-app">
     <h1>Todo App</h1>
 
     <form id="todoForm" action="save.json" method="POST">
